# aoc2022

./: .gitignore  Cargo.toml  README.md
src/: eigth-day.rs  eleventh-day.rs  fifteenth-day.rs  fifth-day.rs  first-day.rs  fourteenth-day.rs  fourth-day.rs  nineth-day.rs  second-day.rs  seventh-day.rs  sixth-day.rs  tenth-day.rs  third-day.rs  thirteenth-day.rs  twelfth-day.rs
