[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "first-day"
path = "src/first-day.rs"

[[bin]]
name = "second-day"
path = "src/second-day.rs"

[[bin]]
name = "third-day"
path = "src/third-day.rs"

[[bin]]
name = "fourth-day"
path = "src/fourth-day.rs"

[dependencies]
regex = "1.7.0"