[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "first-day"
path = "src/first-day.rs"

[[bin]]
name = "second-day"
path = "src/second-day.rs"

[[bin]]
name = "third-day"
path = "src/third-day.rs"

[[bin]]
name = "fourth-day"
path = "src/fourth-day.rs"

[[bin]]
name = "fifth-day"
path = "src/fifth-day.rs"

[[bin]]
name = "sixth-day"
path = "src/sixth-day.rs"

[[bin]]
name = "seventh-day"
path = "src/seventh-day.rs"
[[bin]]
name = "eigth-day"
path = "src/eigth-day.rs"

[[bin]]
name = "nineth-day"
path = "src/nineth-day.rs"

[[bin]]
name = "tenth-day"
path = "src/tenth-day.rs"

[[bin]]
name = "eleventh-day"
path = "src/eleventh-day.rs"

[[bin]]
name = "twelfth-day"
path = "src/twelfth-day.rs"
[dependencies]
itertools = "0.10.5"
